Issue 397: fixed 'Flickering preview collapse animation in Safari 8.0.5':  - Fixed animation of 'Uber API' block.  - Fixed flickering in Safari browser.  - TODO: animate collapsing for Safari

--- a/app/styles/components/collapse-when.less
+++ b/app/styles/components/collapse-when.less
@@ -1,9 +1,4 @@
 [collapse-when] {
   height: auto;
   overflow-y: hidden;
-  transition: height ease-out 200ms;
-
-  &.c-w-collapsed {
-    height: 0;
-  }
 }
